terraform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: localhost  # Specify localhost as the host
    http:
      paths:
      - path: /graphql
        pathType: ImplementationSpecific
        backend:
          service:
            name: graphql
            port:
              number: 4000
      - path: /api/v1/(recipes(/.*)?)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
